--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,7 +16,7 @@
 }
 
 .logo img {
-  height: 100px;
+  height: 70px;
   width: auto;
   margin-right: 8px;
 }
@@ -34,7 +34,7 @@ nav ul li {
 
 nav ul li a {
   text-decoration: none;
-  font-size: 24px;
+  font-size: 20px;
   color: #fff;
   font-weight: 500;
 }
@@ -108,6 +108,9 @@ nav ul li a:hover {
 
 .about-content img {
   flex: 1;
+  width: 100%;
+  height: 400px;
+  border-radius: 15px;
 }
 
 /* Service Section */
@@ -137,6 +140,12 @@ nav ul li a:hover {
   border-radius: 10px;
   padding: 20px;
   margin: auto 0;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+}
+
+.service-card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
 }
 
 .service-card h3 {
@@ -161,8 +170,19 @@ nav ul li a:hover {
   border-radius: 5px;
   text-decoration: none;
   font-weight: bold;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 
+.service-card a:hover {
+ background-color: #fff;
+ color: #0e0e47;
+ border: 1px solid #0e0e47;
+}
+
+ /* Responsive service section */
+ @media (max-width: 768px ) {
+  
+ }
 /* Contact Section */
 .contact-section {
   padding: 40px 20px;
@@ -195,7 +215,7 @@ nav ul li a:hover {
   flex: 1;
   max-width: 500px;
   background-color: #0e0e47;
-  padding: 25px 40px;
+  padding: 20px 40px;
   border: 1px solid #ccc;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -211,9 +231,8 @@ nav ul li a:hover {
 
 .contact-content form label {
   display: block;
-  font-size: 30px 40px;
-  font-weight: bold;
-  margin: 5px 0;
+  font-size: 20px;
+  margin-bottom: 5px;
   color: #fff;
 }
 
@@ -227,7 +246,7 @@ nav ul li a:hover {
   font-size: 16px;
 }
 
-.contact-content button {
+.contact-content form button {
   background-color: #fff;
   width: 100%;
   padding: 10px 10px;
@@ -244,6 +263,74 @@ nav ul li a:hover {
   border: 1px solid #fff;
   cursor: pointer;
 }
+
+/* Responsive Contact section */
+@media (max-width: 768px) {
+  .contact-section h2 {
+    font-size: 30px;
+    margin-bottom: 30px;
+  }
+
+  .contact-content {
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+  }
+
+  .contact-content iframe {
+    height: 400px;
+    width: 100%;
+  }
+
+  .contact-content form {
+    width: 100%;
+    padding: 10px 20px;
+  }
+
+  .contact-content form label {
+    font-size: 16px;
+  }
+
+  .contact-content form input,
+  .contact-content form textarea {
+    font-size: 14px;
+  }
+
+  .contact-content form button {
+    font-size: 20px;
+  }
+}
+@media (max-width: 480px) {
+  .contact-section h2 {
+    font-size: 28px;
+    margin-bottom: 28px;
+  }
+
+  .contact-content iframe {
+    height: 300px;
+    width: 100%;
+  }
+
+  .contact-content form {
+    width: 100%;
+    padding: 8px 16px;
+  }
+
+  .contact-content form label {
+    font-size: 14px;
+  }
+
+  .contact-content form input,
+  .contact-content form textarea {
+    font-size: 14px;
+  }
+
+  .contact-content form button {
+    font-size: 18px;
+  }
+
+}
+
 /*Footer Section*/
 
 .footer-section {
@@ -259,11 +346,6 @@ nav ul li a:hover {
   margin: 0 auto;
 }
 
-/* .footer-logo {
-  flex: 1;
-  margin-right: 20px;
-} */
-
 .footer-logo img {
   width: 200px;
   margin-bottom: 10px;
@@ -275,11 +357,12 @@ nav ul li a:hover {
 }
 
 .footer-links {
-  margin: 0 20px;
+  margin: 0 25px;
+  text-align: center;
 }
 
 .footer-links h4 {
-  font-size: 18px;
+  font-size: 20px;
   font-weight: bold;
   margin-bottom: 10px;
 }
@@ -300,4 +383,237 @@ nav ul li a:hover {
 
 .footer-links ul li a:hover {
   color: #fff;
+}
+
+@media (max-width: 768px) {
+  .footer-content {
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    padding: 20px 10px;
+  }
+
+  .footer-logo img {
+    width: 150px;
+  }
+
+  .footer-logo p {
+    font-size: 14px;
+  }
+
+  .footer-links {
+    margin: 20px 0;
+    text-align: center;
+  }
+
+  .footer-links h4 {
+    font-size: 18px;
+  }
+}
+
+/* About Page CSS */
+/* Hero about section */
+.hero-about-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 80vh;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0.75)),
+    url("../Images/abouts.jpg");
+  background-size: cover;
+  background-position: center;
+  padding: 40px 20px;
+}
+
+@media (max-width: 768px) {
+  .hero-about-section {
+    height: 50vh;
+    padding: 30px 15px;
+  }
+
+  .hero-content h2 {
+    font-size: 24px;
+  }
+
+  .hero-content p {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 480px) {
+  .hero-about-section {
+    height: 40vh;
+    padding: 20px 10px;
+  }
+
+  .hero-content h2 {
+    font-size: 20px;
+  }
+
+  .hero-content p {
+    font-size: 14px;
+  }
+}
+
+/* Main About section */
+
+.main-about {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  margin: 30px;
+  padding: 20px 30px;
+}
+
+.about-text {
+  flex: 1;
+}
+
+.about-text h2 {
+  color: #0e0e47;
+  margin-bottom: 10px;
+  font-size: 36px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+}
+
+.about-text p {
+  font-size: 20px;
+  color: #5f5959;
+  line-height: 1.6;
+  margin-bottom: 20px;
+}
+
+.about-text a {
+  font-size: 18px;
+  background-color: #0e0e47;
+  color: #fff;
+  text-decoration: none;
+  padding: 10px 20px;
+  border-radius: 10px;
+}
+
+.about-text a:hover {
+  background-color: #fff;
+  color: #0e0e47;
+  border: 1px solid #0e0e47;
+}
+
+.about-img {
+  flex: 1;
+}
+.about-img img {
+  width: 100%;
+  max-width: 100%;
+  border-radius: 10px;
+}
+
+@media (max-width: 768px) {
+  .main-about {
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    gap: 30px;
+  }
+
+  .about-text h2 {
+    font-size: 30px;
+  }
+
+  .about-text p {
+    font-size: 16px;
+  }
+
+  .about-text a {
+    font-size: 16px;
+    padding: 8px 16px;
+  }
+}
+@media (max-width: 480px) {
+  .main-about {
+    margin: 20px;
+    padding: 15px;
+    gap: 20px;
+  }
+
+  .about-text h2 {
+    font-size: 24px;
+  }
+
+  .about-text p {
+    font-size: 16px;
+  }
+
+  .about-text a {
+    font-size: 14px;
+    padding: 6px 12px;
+  }
+
+  .about-img img {
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+
+/* Why Choose Us section */
+
+.choose-us-section {
+  padding: 40px 30px;
+  background-color: #f3f3f3;
+}
+
+.why-choose-us h2 {
+  font-size: 36px;
+  color: #0e0e47;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.why-choose-us p {
+  font-size: 16px;
+  color: #5f5959;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.card-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 30px;
+  margin: 30px 40px;
+}
+
+.card {
+  background-color: #fff;
+  padding: 30px;
+  border-radius: 15px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+  background-color: #f9f9f9;
+}
+
+.card h3 {
+  font-size: 20px;
+  color: #0e0e47;
+  margin-bottom: 10px;
+}
+
+.card p {
+  font-size: 16px;
+  color: #666;
+  line-height: 1.5;
+}
+
+/* responsive cards */
+
+@media (max-width: 768px) {
+  .card-container {
+    grid-template-columns: 1fr;
+  }
 }
